<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suicxde.carminder.Activities.RegisterActivity"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="25sp"
                    style="@style/viewParent.headerText.NoMode"
                    android:textColor="@color/whiteTextColor"
                    android:text="@string/registerwithus"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/registration"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

              >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/name"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:textSize="15sp"
                            android:maxLines="1"
                            android:hint="@string/name"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/eemail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/email"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textSize="15sp"
                            android:hint="@string/email"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/mobile"
                            style="@style/modifiedEditText"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:textSize="15sp"
                            android:hint="@string/mobile"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/password"
                            style="@style/modifiedEditText"
                            android:hint="@string/password"
                            android:maxLines="1"
                            android:textSize="15sp"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirmps"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/confirmpass"
                            style="@style/modifiedEditText"
                            android:hint="@string/confirmpass"
                            android:textSize="15sp"
                            android:maxLines="1"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/registerbutton"
                        style="@style/loginButton"
                        app:spinning_bar_width="4dp"
                        app:spinning_bar_color="#FFF"
                        android:text="@string/registerbut"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_padding="6dp"/>

                    <TextView
                        android:id="@+id/aleadbutton"
                        style="@style/parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/themeColor"
                        android:textSize="17sp"
                        android:text="@string/alreadyhave"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="20dp"
                        android:onClick="onLoginClick"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>





        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_img"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="onLoginClick"
        android:adjustViewBounds="false"/>
</RelativeLayout>