<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="com.suicxde.carminder.Activities.LoginActivity"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/welcome"
                    android:textSize="30sp"
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="carMinder" />

                <ImageView

                    android:layout_width="178dp"
                    android:layout_height="156dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="17dp"
                    android:layout_marginRight="1dp"
                    android:src="@drawable/icon" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/email"
                    style="@style/modifiedEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="17sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/password"
                    style="@style/modifiedEditText"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fogotpassword"
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/fogot"
                android:textColor="@color/primaryTextColor"
                android:textSize="15dp"
                android:onClick="onFogotButtonClick"/>x


            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/loginbutton"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:onClick="onLoginClick"
                android:text="@string/login"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <TextView
                android:id="@+id/registerbutton"
                style="@style/parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:onClick="onRegisterClick"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/themeColor"
                android:textSize="17sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center_horizontal"
                    android:text="@string/language"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/sinhala"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:onClick="setSinhala"
                    android:src="@drawable/sinhala" />

                <ImageView
                    android:id="@+id/english"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"

                    android:onClick="setEnglish"
                    android:src="@drawable/eng" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView

        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_img"
        android:layout_marginRight="11dp"
android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:onClick="onRegisterClick"/>
</RelativeLayout>