<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suicxde.carminder.Activities.FogotPassword"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
    
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="30sp"
                    style="@style/viewParent.headerText.NoMode"
                    android:textColor="@color/whiteTextColor"
                    android:text="@string/fogotpassword"/>

            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/recoverpassword"></TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirmps"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/recoveremail"
                            style="@style/modifiedEditText"
                            android:hint="@string/email"
                            android:textSize="18sp"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/resetbutton"
                        style="@style/loginButton"
                        app:spinning_bar_width="4dp"
                        app:spinning_bar_color="#FFF"
                        android:text="@string/resetpasswordbut"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_padding="6dp"
                        android:onClick="onResetClick"/>

                    <TextView

                        style="@style/parent"
                />

                    <ImageView
                        android:layout_width="240dp"
                        android:layout_height="240dp"
                      android:layout_gravity="center"
                        android:src="@drawable/fogot2" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>





        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_img"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="onBackClick"
        android:adjustViewBounds="false"/>
</RelativeLayout>